k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: trader-tools
  labels:
    name: trader-tools
    environment: production
